--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,10 @@
         "symfony/dotenv": "4.3.*",
         "symfony/flex": "^1.1",
         "symfony/framework-bundle": "4.3.*",
-        "symfony/yaml": "4.3.*"
+        "symfony/twig-bundle": "4.3.*",
+        "symfony/webpack-encore-bundle": "^1.6",
+        "symfony/yaml": "4.3.*",
+        "twig/twig": "^2.0"
     },
     "config": {
         "preferred-install": {
@@ -41,7 +44,9 @@
             "assets:install %PUBLIC_DIR%": "symfony-cmd"
         },
         "post-install-cmd": [
-            "@auto-scripts"
+            "@auto-scripts",
+            "npm install",
+            "npm dev"
         ],
         "post-update-cmd": [
             "@auto-scripts"
