--- a/composer.json
+++ b/composer.json
@@ -46,7 +46,7 @@
         "post-install-cmd": [
             "@auto-scripts",
             "npm install",
-            "npm dev"
+            "npm run encore dev"
         ],
         "post-update-cmd": [
             "@auto-scripts"
