--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
         "symfony/dotenv": "4.3.*",
         "symfony/flex": "^1.1",
         "symfony/framework-bundle": "4.3.*",
+        "symfony/orm-pack": "^1.0",
         "symfony/twig-bundle": "4.3.*",
         "symfony/webpack-encore-bundle": "^1.6",
         "symfony/yaml": "4.3.*",
@@ -47,7 +48,8 @@
         "post-install-cmd": [
             "@auto-scripts",
             "yarn install",
-            "yarn build"
+            "yarn build",
+            "php bin/console doctrine:migrations:migrate"
         ],
         "post-update-cmd": [
             "@auto-scripts"
@@ -61,5 +63,8 @@
             "allow-contrib": false,
             "require": "4.3.*"
         }
+    },
+    "require-dev": {
+        "symfony/maker-bundle": "^1.11"
     }
 }
