--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
         "symfony/twig-bundle": "4.3.*",
         "symfony/webpack-encore-bundle": "^1.6",
         "symfony/yaml": "4.3.*",
-        "twig/twig": "^2.0"
+        "twig/twig": "^2.0",
+        "symfony/maker-bundle": "^1.11"
     },
     "config": {
         "preferred-install": {
@@ -63,8 +64,5 @@
             "allow-contrib": false,
             "require": "4.3.*"
         }
-    },
-    "require-dev": {
-        "symfony/maker-bundle": "^1.11"
     }
 }
